# RamanujansDreams

./: .gitignore  CONTRIBUTING.md  README.md  Ramanujan's_Dreams.ipynb  data_extractor.py  delta_dev.ipynb  main.py  pyproject.toml  running-example.ipynb  temp.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CMFvisual/: analysis.py
dreamer/: __init__.py
dreamer/analysis/: __init__.py
dreamer/analysis/analysis_methods/: serial_analyzer.py
dreamer/analysis_stage/: __init__.py  analysis_scheme.py  errors.py
dreamer/configs/: __init__.py  analysis.py  configurable.py  database.py  extraction.py  logging.py  search.py  system.py
dreamer/db_stage/: __init__.py  config.py  db_scheme.py  errors.py
dreamer/extraction/: __init__.py  chrr_sampler.py  extractor.py  hyperplanes.py  pfq_symetry_helper.py  sampler_chrr.py  sampler_sphere.py  shard.py
dreamer/loading/: __init__.py  config.py  errors.py
dreamer/search/: __init__.py  errors.py
dreamer/search_stage/: data_manager.py
dreamer/system/: __init__.py  constant_transform.py  errors.py  module.py  system.py
dreamer/utils/: caching.py  constant_transform.py  logger.py  mp_manager.py  types.py
examples/: analysis.py  main_example.py  search.py
graphs/: UML.drawio  object_managment.drawio  sys_run.drawio
rt_search/: __init__.py
rt_search/analysis_stage/: analysis_scheme.py
rt_search/configs/: search.py  system.py
rt_search/search_stage/: data_manager.py  searcher_scheme.py
rt_search/system/: constant_transform.py  system.py
rt_search/utils/: caching.py  logger.py  types.py
(+74 files in other folders)
