[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dreamer*"]

[project]
name = "ramanujans-dreams"
version = "0.0.1"
description = "System for modular automated search in CMFs for irrationality of constants"
authors = [{ name="Uri K.H." }]
dependencies = [
    "peewee",
    "sympy",
    "ramanujantools @ git+https://github.com/RamanujanMachine/ramanujantools.git",
    "matplotlib",
    "numpy",
    "mpmath",
    "networkx",
    "tqdm",
    "numba",
    "requests",
    "pandas",
    "scipy",
    "pulp",
    "LIReC @ git+https://github.com/RamanujanMachine/LIReC.git@main"
]